# Multi-rotor-assessment-task

./: README .md  README.md  a.out  hel  simtop.md  ubuntu.md
OpenCV/: 1  1.cpp  cam  cam.cpp
helloworld/: libHelloWorld.cpp  useHello.cpp
helloworld/hello1/: CMakeLists.txt  hello.cpp  hello.h  main.cpp
helloworld/usecmake/: CMakeLists.txt  libHelloWorld.h
helloworld/useg++/: helloworld.cpp  libHelloworld.cpp
pytorch/: test.py  v.py
ros2/rclcpp/1topics/: 1node_1.cpp  CMakeLists.txt  package.xml
ros2/rclcpp/1topics/publisher/: 2not_composable.cpp  3member_function.cpp
ros2/rclcpp/1topics/subscriber/: 4not_composable.cpp  5lambda.cpp
yolo/: 1.py
yolo/yolov5-master/DATA/: cat.yaml  json2txt.py
yolo/yolov5-master/DATA/labels/: test.cache  train.cache
yolo/yolov5-master/DATA/labels/json/: cat.0.json  cat.1.json  cat.10.json  cat.11.json  cat.12.json  cat.13.json  cat.14.json  cat.15.json  cat.16.json  cat.17.json  cat.18.json  cat.19.json  cat.2.json  cat.20.json  cat.21.json  cat.22.json  cat.23.json  cat.24.json  cat.25.json  cat.26.json  cat.27.json  cat.28.json  cat.29.json  cat.3.json  cat.30.json  cat.31.json  cat.32.json  cat.33.json  cat.34.json  cat.35.json  cat.36.json  cat.37.json  cat.38.json  cat.39.json  cat.4.json  cat.40.json  cat.41.json  cat.5.json  cat.6.json  cat.7.json  (+2 more)
yolo/yolov5-master/DATA/labels/json/train/: cat.30.json  cat.79.json  cat.80.json  cat.81.json  cat.82.json  cat.83.json  cat.84.json  cat.85.json  cat.86.json  cat.87.json  cat.88.json
yolo/yolov5-master/DATA/labels/test/: cat.30.txt  cat.79.txt  cat.80.txt  cat.81.txt  cat.82.txt  cat.83.txt  cat.84.txt  cat.85.txt  cat.86.txt  cat.87.txt  cat.88.txt
yolo/yolov5-master/DATA/labels/train/: cat.16.txt  cat.17.txt  cat.21.txt  cat.24.txt  cat.27.txt  cat.29.txt  cat.3.txt  cat.32.txt  cat.34.txt  cat.36.txt  cat.4.txt  cat.8.txt
yolo/yolov5-master/DATA/labels/txt/: cat.0.txt  cat.1.txt  cat.10.txt  cat.11.txt  cat.12.txt  cat.13.txt  cat.14.txt  cat.15.txt  cat.18.txt  cat.19.txt  cat.2.txt  cat.20.txt  cat.22.txt  cat.23.txt  cat.25.txt  cat.26.txt  cat.28.txt  cat.30.txt  cat.31.txt  cat.33.txt  cat.35.txt  cat.37.txt  cat.38.txt  cat.39.txt  cat.40.txt  cat.41.txt  cat.5.txt  cat.6.txt  cat.7.txt  cat.9.txt
